[package]
name = "io-traits"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", optional = true }
smol = { version = "2.0.2", optional = true }
futures = { version = "0.3.31", default-features = false, optional = true }
thiserror = "2.0.17"
tokio-stream = { version = "0.1.17", default-features = false, optional = true }

[features]
default = ["full"]

smol = ["dep:futures", "dep:smol"]
tokio = ["dep:futures", "dep:tokio"]
futures-executor = ["dep:futures"]

full = ["lock", "channel"]
lock = ["tokio/sync", "futures/std"]
channel = ["tokio/sync", "dep:tokio-stream", "tokio-stream/sync"]
