[package]
name = "byor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", optional = true }
smol = { version = "2.0.2", optional = true }
futures = { version = "0.3.31", default-features = false, optional = true }
thiserror = "2.0.17"
tokio-stream = { version = "0.1.17", default-features = false, optional = true }
tokio-util = { version = "0.7.17", default-features = false, optional = true }
futures-lite = { version = "2.6.1", default-features = false, features = [
	"std",
], optional = true }

[features]
default = ["full"]

smol = ["dep:smol"]
tokio = ["dep:tokio", "dep:tokio-stream", "dep:tokio-util"]
futures = ["dep:futures"]

full = ["lock", "channel", "exec", "fs"]
exec = ["tokio/rt-multi-thread", "futures/thread-pool"]
lock = ["tokio/sync"]
channel = ["dep:futures-lite", "tokio/sync", "tokio-stream/sync"]
fs = ["dep:futures-lite", "tokio/fs", "tokio-stream/fs", "tokio-util/compat"]
